# JETSCAPE

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: 01-bug_report.yml
.github/workflows/: plot_observables.yaml  test-build-external.yaml  test-build-macos-native.yaml  test-build-nPDF.yaml  test-code-format.yaml  test-events-PbPb.yaml  test-events-brick.yaml  test-events-pp.yaml
cmakemodules/: FindSMASH.cmake
config/: jetscape_main.xml  jetscape_user_ThermPtnSampler_example_2D.xml  jetscape_user_rMatterLbt.xml  jetscape_user_tr1.xml
examples/unittests/: CMakeLists.txt
external_packages/: CMakeLists.txt  get_lbtTab.sh  get_smash.sh
external_packages/Cornelius/: CMakeLists.txt  Cornelius.cpp  Cornelius.h  Cube.cpp  Cube.h  GeneralGeometryElement.cpp  GeneralGeometryElement.h  Hypercube.cpp  Hypercube.h  Line.cpp  Line.h  Polygon.cpp  Polygon.h  Polyhedron.cpp  Polyhedron.h  README.md  Square.cpp  Square.h
external_packages/hydro_from_external_file/: CMakeLists.txt  GNUmakefile  SurfaceFinder.cpp  SurfaceFinder.h
src/afterburner/: SmashWrapper.cc
src/framework/: Afterburner.h  FluidCellInfo.h  FluidDynamics.cc  FluidEvolutionHistory.cc  FluidEvolutionHistory.h  Hadronization.h  HadronizationManager.h  HadronizationModule.h  HardProcess.h  InitialState.h  JetClass.h  JetEnergyLoss.h  JetEnergyLossManager.h  JetScape.h  JetScapeBanner.h  JetScapeEvent.h  JetScapeEventHeader.h  JetScapeModuleBase.h  JetScapeModuleMutex.h  JetScapeParticles.h  JetScapeSignalManager.h  JetScapeTask.h  JetScapeTaskSupport.h  JetScapeWriter.h  LinearInterpolation.h  (+18 more)
(+9 files in other folders)
